Dynamicke nacitani obsahu v Prehledu (krome kalendare) - vcetne potrebnych AJAXu kvuli zmene dat pri interakcich

--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -99,6 +99,7 @@
 {* Libraries *}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/js/lib/axios/config.js"></script>
+<script src="/js/lib/week-number/week-number.js"></script>
 {* Own scripts *}
 <script src="/js/application/header-control.js"></script>
 {* Content view requested scripts *}
