--- a/src-front/less/components/_control-bars.less
+++ b/src-front/less/components/_control-bars.less
@@ -7,9 +7,11 @@
   padding: .4em 0;
 
   .week {
+    width: 5.7em;
     margin: 0 2em;
     font-weight: bold;
     .uppercase();
+    text-align: center;
   }
 
   .icon-button {
