Pridana sablona pro profil uzivatele

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -241,3 +241,14 @@
   .icon(@fa-var-hood-cloak, "d");
 }
 // END profilove obrazky
+
+
+// START profily
+.palette-i {
+  .icon(@fa-var-palette, "s");
+}
+
+.edit-i {
+  .icon(@fa-var-pencil-alt, "s");
+}
+// END profily
