--- a/src-front/less/core.less
+++ b/src-front/less/core.less
@@ -85,6 +85,7 @@
 @import "pages/_summary";
 @import "pages/_introduction";
 @import "pages/_my-reminders-and-notes";
+@import "pages/_profile";
 
 
 /*
