--- a/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
+++ b/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
@@ -133,7 +133,7 @@
             </section>
         </div>
 
-        <div class="alert-external-container">
+        <div class="alert-external-container hide">
             <div class="alert-box">
                 <header class="alert-header">
                     <h3 class="alert-heading">Přidání upozornění</h3>
@@ -248,7 +248,7 @@
     </p>
 </footer>
 
-<div class="alert-container"></div>
+<div class="alert-container hide"></div>
 
 <script src="/js/lib/datepickk/datepickk.js"></script>
 <script src="/js/application/form-control.js"></script>
