--- a/src/views/Application/private-reminders-and-notes.latte
+++ b/src/views/Application/private-reminders-and-notes.latte
@@ -26,11 +26,15 @@
                             <span class="subject school-subject">ČJL</span>
                             <span class="type"><i class="homework-i"></i></span>
                             <span class="description">Přečíst ukázku z učebnice na str. 68</span>
+                            <i class="action edit-i"></i>
+                            <i class="action delete-i"></i>
                         </div>
                         <div class="record-row">
                             <span class="subject school-subject">FAR</span>
                             <span class="type"><i class="test-i"></i></span>
                             <span class="description">Malířství, Fotografie</span>
+                            <i class="action edit-i"></i>
+                            <i class="action delete-i"></i>
                         </div>
                     </div>
                 </div>
@@ -41,11 +45,15 @@
                             <span class="subject school-subject">DVK</span>
                             <span class="type"><i class="homework-i"></i></span>
                             <span class="description">Prezentace - Edouard Manet</span>
+                            <i class="action edit-i"></i>
+                            <i class="action delete-i"></i>
                         </div>
                         <div class="record-row">
                             <span class="subject school-subject">DVK</span>
                             <span class="type"><i class="test-i"></i></span>
                             <span class="description">Renesanční malba v Itálii, Renesanční sloh v ostatní Evropě</span>
+                            <i class="action edit-i"></i>
+                            <i class="action delete-i"></i>
                         </div>
                     </div>
                 </div>
@@ -60,6 +68,8 @@
                             <span class="subject school-subject"></span>
                             <span class="type"><i class="school-event-i"></i></span>
                             <span class="description">Divadlo - Romeo a Julie</span>
+                            <i class="action edit-i"></i>
+                            <i class="action delete-i"></i>
                         </div>
                     </div>
                 </div>
@@ -70,11 +80,15 @@
                             <span class="subject school-subject">EKO</span>
                             <span class="type"><i class="test-i"></i></span>
                             <span class="description">Marketing</span>
+                            <i class="action edit-i"></i>
+                            <i class="action delete-i"></i>
                         </div>
                         <div class="record-row">
                             <span class="subject school-subject">ANJ</span>
                             <span class="type"><i class="test-i"></i></span>
                             <span class="description">Slovíčka 6. lekce</span>
+                            <i class="action edit-i"></i>
+                            <i class="action delete-i"></i>
                         </div>
                     </div>
                 </div>
@@ -143,15 +157,23 @@
         <section class="content-container">
             <div class="content-row">
                 <p>Od 16. 9. nosit sbírku Petáková</p>
+                <i class="action edit-i"></i>
+                <i class="action delete-i"></i>
             </div>
             <div class="content-row">
                 <p>SRPŠ bude nejspíše ve středu 6. 11.</p>
+                <i class="action edit-i"></i>
+                <i class="action delete-i"></i>
             </div>
             <div class="content-row">
                 <p>Příští týden (4. 11. až 8. 11.) mám službu - dávat pozor na mytí tabule a nošení pomůcek</p>
+                <i class="action edit-i"></i>
+                <i class="action delete-i"></i>
             </div>
             <div class="content-row">
                 <p>27. 11. bude přednáškový den. Bylo by dobré sehnat nějakého řečníka. Nápady: někdo z ITnetwork, Karel z Freela</p>
+                <i class="action edit-i"></i>
+                <i class="action delete-i"></i>
             </div>
         </section>
 
