Pridana sablona pro profil tridy (bez skupin a vyucovacich hodin)

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -251,4 +251,20 @@
 .edit-i {
   .icon(@fa-var-pencil-alt, "s");
 }
+
+.leave-i {
+  .icon(@fa-var-door-open, "s");
+}
+
+.approve-i {
+  .icon(@fa-var-check, "s");
+}
+
+.decline-i {
+  .icon(@fa-var-times, "r");
+}
+
+.delete-cross-i {
+  .icon(@fa-var-times, "r");
+}
 // END profily
