--- a/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
+++ b/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
@@ -57,12 +57,14 @@
 <main class="page-content summary">
     <div class="page multi-page">
         <header class="multi-page-header">
-            <span class="page-tab active">Můj profil</span>
-            <span class="page-tab">Profil třídy</span>
+            <!-- TODO: třídu "active" nastavit aktivní kartě -->
+            <a class="page-tab" href="#">Můj profil</a>
+            <a class="page-tab active" href="#">Profil třídy</a>
         </header>
 
         <!-- Můj profil -->
-        <section class="multi-page-content first-page">
+        <!-- TODO: hide nastavit neaktivní podstránce -->
+        <section class="multi-page-content hide">
             <div class="profile-image-changer">
                 <div class="profile-icons">
                     <!-- TODO: Automaticky generované -->
@@ -79,41 +81,39 @@
             </div>
 
             <div class="user-data">
-                <div class="action-container">
-                    <form method="post" action="" class="app-form">
-                        <div class="form-inputs">
-                            <div class="form-input-row">
-                                <label for="first-name" class="form-label">Jméno</label>
-                                <input name="first-name" type="text" id="first-name" class="form-input" disabled autofocus value="Adéla" />
-                                <i class="form-input-action edit-i"></i>
-                            </div>
-                            <div class="form-input-row">
-                                <label for="last-name" class="form-label">Příjmení</label>
-                                <input name="last-name" type="text" id="last-name" class="form-input" disabled value="Vyhnálková" />
-                                <i class="form-input-action edit-i"></i>
-                            </div>
-                            <div class="form-input-row">
-                                <label for="login-name" class="form-label">Přihlašovací jméno</label>
-                                <input name="login-name" type="text" id="login-name" class="form-input" disabled value="Adéla2365" />
-                                <i class="form-input-action edit-i"></i>
-                            </div>
-                            <div class="form-input-row">
-                                <label for="email" class="form-label">Email</label>
-                                <input name="email" type="email" id="email" class="form-input" disabled value="adelavyhnalkova@seznam.cz" />
-                                <i class="form-input-action edit-i"></i>
-                            </div>
+                <form method="post" action="" class="app-form">
+                    <div class="form-inputs">
+                        <div class="form-input-row">
+                            <label for="first-name" class="form-label">Jméno</label>
+                            <input name="first-name" type="text" id="first-name" class="form-input" disabled autofocus value="Adéla" />
+                            <i class="form-input-action edit-i"></i>
                         </div>
+                        <div class="form-input-row">
+                            <label for="last-name" class="form-label">Příjmení</label>
+                            <input name="last-name" type="text" id="last-name" class="form-input" disabled value="Vyhnálková" />
+                            <i class="form-input-action edit-i"></i>
+                        </div>
+                        <div class="form-input-row">
+                            <label for="login-name" class="form-label">Přihlašovací jméno</label>
+                            <input name="login-name" type="text" id="login-name" class="form-input" disabled value="Adéla2365" />
+                            <i class="form-input-action edit-i"></i>
+                        </div>
+                        <div class="form-input-row">
+                            <label for="email" class="form-label">Email</label>
+                            <input name="email" type="email" id="email" class="form-input" disabled value="adelavyhnalkova@seznam.cz" />
+                            <i class="form-input-action edit-i"></i>
+                        </div>
+                    </div>
 
-                        <div class="form-links">
-                            <a class="action-link action" href="#">Změnit heslo</a>
-                        </div>
+                    <div class="form-links">
+                        <a class="action-link action" href="#">Změnit heslo</a>
+                    </div>
 
-                        <div class="form-alerts">
-                            <p class="form-alert negative">Nebyla vyplněna všechna pole.</p>
-                            <p class="form-alert negative">Byl zadán špatný formát emailové adresy.</p>
-                        </div>
-                    </form>
-                </div>
+                    <div class="form-alerts">
+                        <p class="form-alert negative">Nebyla vyplněna všechna pole.</p>
+                        <p class="form-alert negative">Byl zadán špatný formát emailové adresy.</p>
+                    </div>
+                </form>
             </div>
 
             <div class="quota">
@@ -124,7 +124,196 @@
         </section>
 
         <!-- Profil třídy -->
-        <section class="multi-page-content second-page hide">
+        <section class="multi-page-content without-side-padding">
+            <header class="class-profile-header">
+                <nav class="class-profile-menu">
+                    <ul class="class-profile-menu-list">
+                        <!-- TODO: třída "active" položce, která odkazuje na aktivní podstránku -->
+                        <li class="class-profile-menu-item _profile-menu-item active" data-for="information"><a class="class-profile-menu-link" href="javascript:void(0)">Informace</a></li>
+                        <li class="class-profile-menu-item _profile-menu-item" data-for="classrooms"><a class="class-profile-menu-link" href="javascript:void(0)">Učebny</a></li>
+                        <li class="class-profile-menu-item _profile-menu-item" data-for="teachers"><a class="class-profile-menu-link" href="javascript:void(0)">Učitelé</a></li>
+                        <li class="class-profile-menu-item _profile-menu-item" data-for="subjects"><a class="class-profile-menu-link" href="javascript:void(0)">Předměty</a></li>
+                        <li class="class-profile-menu-item _profile-menu-item" data-for="groups"><a class="class-profile-menu-link" href="javascript:void(0)">Skupiny</a></li>
+                        <li class="class-profile-menu-item _profile-menu-item" data-for="lessons"><a class="class-profile-menu-link" href="javascript:void(0)">Vyučovací hodiny</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <!-- TODO: Třída "hide" podstránkám, které nemají být zobrazené -->
+            <!-- Informace -->
+            <section class="class-profile-content _profile-subpage hide" data-id="information">
+                <form method="post" action="" class="app-form">
+                    <div class="form-inputs">
+                        <div class="form-input-row">
+                            <label class="form-label">Škola</label>
+                            <span class="form-input">Střední uměleckoprůmyslová škola Jihlava-Helenín</span>
+                        </div>
+                        <div class="form-input-row two-actions">
+                            <label for="class" class="form-label">Třída</label>
+                            <input name="class" type="text" id="class" class="form-input" disabled value="4.E" />
+                            <i class="form-input-action leave-i"></i>
+                            <i class="form-input-action edit-i"></i>
+                        </div>
+                        <div class="form-input-row">
+                            <label class="form-label">Počáteční rok</label>
+                            <span class="form-input">2016/17</span>
+                        </div>
+                        <div class="form-input-row">
+                            <label class="form-label">Délka studia</label>
+                            <span class="form-input">4 roky</span>
+                        </div>
+                    </div>
+
+                    <div class="form-alerts">
+                        <p class="form-alert negative">Nebyla vyplněna všechna pole.</p>
+                        <p class="form-alert negative">Byl zadán špatný formát emailové adresy.</p>
+                    </div>
+                </form>
+            </section>
+
+            <!-- Učebny -->
+            <section class="class-profile-content _profile-subpage hide" data-id="classrooms">
+                <div class="add-item">
+                    <!-- TODO: Pokud je zobrazen formulář -> třída "hide" -->
+                    <i class="add-i action hide"></i>
+
+                    <form class="profile-simple-form">
+                        <input name="name" type="text" class="form-input" placeholder="Název" title="Zadej školní název učebny" />
+                        <input name="description" type="text" class="form-input" placeholder="Popis" title="Zadej vlastní popis" />
+                        <i class="action done-i"></i>
+                    </form>
+                </div>
+
+                <div class="profile-table">
+                    <div class="table-row">
+                        <span class="table-data">A1/10</span>
+                        <span class="table-data">tělocvična</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">A1/15</span>
+                        <span class="table-data">kmenová učebna</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">B1/02</span>
+                        <span class="table-data"></span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">B2/03</span>
+                        <span class="table-data">ateliér</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Učitelé -->
+            <section class="class-profile-content _profile-subpage hide" data-id="teachers">
+                <div class="add-item">
+                    <!-- TODO: Pokud je zobrazen formulář -> třída "hide" -->
+                    <i class="add-i action hide"></i>
+
+                    <form class="profile-simple-form">
+                        <input name="shortcut" type="text" class="form-input" placeholder="Zkratka" title="Zadej zkratku, kterou učiteli udělila škola" />
+                        <div class="teacher-name">
+                            <input name="degree-before" type="text" class="form-input" placeholder="Titul(y)" title="Zadej všechny tituly, které má učitel před jménem" />
+                            <input name="name" type="text" class="form-input" placeholder="Jméno a příjmení" title="Zadej celé jméno učitele" />
+                            <input name="degree-after" type="text" class="form-input" placeholder="Titul(y)" title="Zadej všechny tituly, které má učitel za jménem" />
+                        </div>
+                        <i class="action done-i"></i>
+                    </form>
+                </div>
+
+                <div class="profile-table">
+                    <div class="table-row">
+                        <span class="table-data">DOŽ</span>
+                        <span class="table-data">Mgr. Věra Doležalová</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">CIM</span>
+                        <span class="table-data">Ing. Dan Cimburek</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">BAR</span>
+                        <span class="table-data">MgA. Zuzana Bartošová</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">KOL</span>
+                        <span class="table-data">MgA. Matěj Kolář</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Předměty -->
+            <section class="class-profile-content _profile-subpage" data-id="subjects">
+                <div class="add-item">
+                    <!-- TODO: Pokud je zobrazen formulář -> třída "hide" -->
+                    <i class="add-i action hide"></i>
+
+                    <form class="profile-simple-form">
+                        <input name="shortcut" type="text" class="form-input" placeholder="Zkratka" title="Zadej zkratku předmětu používanou školou" />
+                        <input name="name" type="text" class="form-input" placeholder="Název" title="Zadej celý název předmětu" />
+                        <i class="action done-i"></i>
+                    </form>
+                </div>
+
+                <div class="profile-table">
+                    <div class="table-row">
+                        <span class="table-data">ČJL</span>
+                        <span class="table-data">Český jazyk a literatura</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">ANJ</span>
+                        <span class="table-data">Anglický jazyk</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">NĚJ</span>
+                        <span class="table-data">Německý jazyk</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data">SGD</span>
+                        <span class="table-data">Seminář grafického designu</span>
+                        <i class="action delete-cross-i"></i>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Skupiny -->
+            <section class="class-profile-content _profile-subpage hide" data-id="groups">
+
+            </section>
+
+            <!-- Vyučovací hodiny -->
+            <section class="class-profile-content _profile-subpage hide" data-id="lessons">
+
+            </section>
+
+            <footer class="class-profile-footer">
+                <span class="footer-description">O přístup žádá:</span>
+
+                <div class="access-requests-table">
+                    <div class="table-row">
+                        <span class="table-data username">Eliška Starostová</span>
+                        <span class="table-data email">starostova@seznam.cz</span>
+                        <i class="approve-i action approve"></i>
+                        <i class="decline-i action decline"></i>
+                    </div>
+                    <div class="table-row">
+                        <span class="table-data username">Lukáš Kříž</span>
+                        <span class="table-data email">dzal3@gmail.com</span>
+                        <i class="approve-i action approve"></i>
+                        <i class="decline-i action decline"></i>
+                    </div>
+                </div>
+            </footer>
         </section>
     </div>
 </main>
