--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -523,6 +523,12 @@ template {
 .hat-winter-p-i,
 .hat-witch-p-i,
 .hood-cloak-p-i,
+.palette-i,
+.edit-i,
+.leave-i,
+.approve-i,
+.decline-i,
+.delete-cross-i,
 #Datepickk .d-header i#d-previous,
 #Datepickk .d-header i#d-next,
 .app-form .form-inputs .form-input-status.positive,
@@ -811,9 +817,7 @@ template {
 .hat-witch-p-i:before,
 .hood-cloak-p-i:before {
   position: absolute;
-  color: var(--fa-primary-color, inherit);
   opacity: 1;
-  opacity: var(--fa-primary-opacity, 1);
 }
 .fad:after,
 .test-i:after,
@@ -829,19 +833,15 @@ template {
 .hat-winter-p-i:after,
 .hat-witch-p-i:after,
 .hood-cloak-p-i:after {
-  color: var(--fa-secondary-color, inherit);
   opacity: 0.4;
-  opacity: var(--fa-secondary-opacity, 0.4);
 }
 .fa-swap-opacity .fad:before,
 .fad.fa-swap-opacity:before {
   opacity: 0.4;
-  opacity: var(--fa-secondary-opacity, 0.4);
 }
 .fa-swap-opacity .fad:after,
 .fad.fa-swap-opacity:after {
   opacity: 1;
-  opacity: var(--fa-primary-opacity, 1);
 }
 /*!
  * Font Awesome Pro 5.12.1 by @fontawesome - https://fontawesome.com
@@ -878,7 +878,9 @@ template {
 .laugh-i,
 .create-folder-i,
 .move-i,
-.delete-i {
+.delete-i,
+.decline-i,
+.delete-cross-i {
   font-family: 'Font Awesome 5 Pro Regular';
   font-weight: 400;
 }
@@ -928,6 +930,10 @@ template {
 .upload-i,
 .share-i,
 .rename-i,
+.palette-i,
+.edit-i,
+.leave-i,
+.approve-i,
 #Datepickk .d-header i#d-previous,
 #Datepickk .d-header i#d-next,
 .app-form .form-inputs .form-input-status.positive,
@@ -4324,6 +4330,53 @@ body.active-alert {
 .page.with-toolbar .toolbar-page-content {
   width: 100%;
 }
+.page.multi-page,
+.page.with-toolbar .toolbar-page-content.multi-page {
+  border: none;
+  padding: 0;
+}
+.page.multi-page .multi-page-header .page-tab,
+.page.with-toolbar .toolbar-page-content.multi-page .multi-page-header .page-tab {
+  display: inline-block;
+  text-transform: lowercase;
+  font-family: "Alegreya sans SC", sans-serif;
+  padding: 0.2em 1.6em 0.3em 1.6em;
+  border: 2px solid #EEE9E5;
+  border-bottom: none;
+  background: #EEE9E5;
+  color: #A7A5A6;
+}
+.page.multi-page .multi-page-header .page-tab:not(:first-child),
+.page.with-toolbar .toolbar-page-content.multi-page .multi-page-header .page-tab:not(:first-child) {
+  margin-left: 1em;
+}
+.page.multi-page .multi-page-header .page-tab.active,
+.page.with-toolbar .toolbar-page-content.multi-page .multi-page-header .page-tab.active {
+  font-weight: bold;
+  background: white;
+  position: relative;
+}
+.page.multi-page .multi-page-header .page-tab.active:after,
+.page.with-toolbar .toolbar-page-content.multi-page .multi-page-header .page-tab.active:after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 100%;
+  background: white;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+}
+.page.multi-page .multi-page-content,
+.page.with-toolbar .toolbar-page-content.multi-page .multi-page-content {
+  padding: 1em;
+  border: 2px solid #EEE9E5;
+}
+.page.multi-page .multi-page-content.without-side-padding,
+.page.with-toolbar .toolbar-page-content.multi-page .multi-page-content.without-side-padding {
+  padding-left: 0;
+  padding-right: 0;
+}
 .page .content-header,
 .page.with-toolbar .toolbar-page-content .content-header {
   display: -webkit-box;
@@ -4384,6 +4437,9 @@ body.active-alert {
 .app-form .form-inputs .form-input-row:not(:last-child) {
   border-bottom: 2px solid #EEE9E5;
 }
+.app-form .form-inputs .form-input-row.two-actions {
+  grid-template-columns: 8em auto 1.4em 1em;
+}
 .app-form .form-inputs .form-full-width-select-row {
   margin-bottom: 2em;
 }
@@ -4395,6 +4451,7 @@ body.active-alert {
   padding-top: 0.4em;
   text-transform: lowercase;
   font-family: "Alegreya sans SC", sans-serif;
+  height: 100%;
 }
 .app-form .form-inputs .form-input {
   width: 100%;
@@ -4414,6 +4471,10 @@ body.active-alert {
 }
 .app-form .form-inputs .form-input::placeholder {
   color: #CDCBCA;
+}
+.app-form .form-inputs .form-input[disabled] {
+  color: #A7A5A6;
+  background: white;
 }
 .app-form .form-inputs .form-input.full-width {
   width: 100%;
@@ -4455,11 +4516,16 @@ body.active-alert {
     margin-left: 8em;
   }
 }
-.app-form .form-inputs .form-input-status {
+.app-form .form-inputs .form-input-status,
+.app-form .form-inputs .form-input-action {
   font-size: 0.73em;
 }
 .app-form .form-inputs .form-input-status.negative {
   margin-right: 0.3em;
+}
+.app-form .form-inputs .form-input-action {
+  color: #84ADAA;
+  cursor: pointer;
 }
 .app-form .full-width-select {
   background: white;
@@ -4514,6 +4580,19 @@ body.active-alert {
 .app-form .form-bottom-text {
   margin-top: 6em;
   margin-bottom: 2em;
+}
+.app-form .form-links {
+  margin: 0.4em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 .alert-form .form-inputs .form-input-group {
   display: -webkit-box;
@@ -5885,6 +5964,78 @@ body.active-alert {
 .hood-cloak-p-i:after {
   content: "\10f6ef";
 }
+.palette-i {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+}
+.palette-i:before {
+  content: "\f53f";
+}
+.edit-i {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+}
+.edit-i:before {
+  content: "\f303";
+}
+.leave-i {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+}
+.leave-i:before {
+  content: "\f52b";
+}
+.approve-i {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+}
+.approve-i:before {
+  content: "\f00c";
+}
+.decline-i {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+}
+.decline-i:before {
+  content: "\f00d";
+}
+.delete-cross-i {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+}
+.delete-cross-i:before {
+  content: "\f00d";
+}
 .link-with-icon,
 .basic-link,
 .action-link {
@@ -6269,7 +6420,7 @@ body.active-alert {
 .my-reminders-notes .page.with-toolbar .toolbar-page-content .content-container .day-row .record-container .record-row,
 .my-reminders-notes .page.with-toolbar .toolbar-page-content.with-toolbar .toolbar-page-content .content-container .day-row .record-container .record-row {
   display: grid;
-  grid-template-columns: 2.5em 1.5em auto;
+  grid-template-columns: 2.5em 1.5em auto 1.4em 1em;
 }
 .my-reminders-notes .page.with-toolbar .toolbar-page-content .content-container .day-row .record-container .record-row:not(:first-child),
 .my-reminders-notes .page.with-toolbar .toolbar-page-content.with-toolbar .toolbar-page-content .content-container .day-row .record-container .record-row:not(:first-child) {
@@ -6277,11 +6428,167 @@ body.active-alert {
   margin-top: 0.2em;
   padding-top: 0.2em;
 }
+.my-reminders-notes .page.with-toolbar .toolbar-page-content .content-container .day-row .record-container .record-row .action,
+.my-reminders-notes .page.with-toolbar .toolbar-page-content.with-toolbar .toolbar-page-content .content-container .day-row .record-container .record-row .action {
+  color: #84ADAA;
+  cursor: pointer;
+  font-size: 0.74em;
+  margin-top: 0.3em;
+}
+.my-reminders-notes .page .content-container .content-row,
+.my-reminders-notes .page.with-toolbar .toolbar-page-content .content-container .content-row {
+  display: grid;
+  grid-template-columns: auto 1.4em 1em;
+}
 .my-reminders-notes .page .content-container .content-row:not(:first-child),
 .my-reminders-notes .page.with-toolbar .toolbar-page-content .content-container .content-row:not(:first-child) {
   border-top: 2px solid #EEE9E5;
   margin-top: 0.2em;
   padding-top: 0.2em;
+}
+.my-reminders-notes .page .content-container .content-row .action,
+.my-reminders-notes .page.with-toolbar .toolbar-page-content .content-container .content-row .action {
+  color: #84ADAA;
+  cursor: pointer;
+  font-size: 0.74em;
+}
+.profile-image-changer .profile-icons .icon {
+  font-size: 2em;
+  background: #F8F7F7;
+  border-radius: 100%;
+  padding: 0.4em;
+}
+.profile-image-changer .profile-icons .icon:not(:first-child) {
+  margin-left: 0.5em;
+}
+.profile-image-changer .action-container {
+  margin-left: 1.8em;
+  margin-top: 0.4em;
+}
+.profile-image-changer .action-container .action {
+  color: #84ADAA;
+  font-size: 0.7em;
+  cursor: pointer;
+}
+.quota {
+  margin-top: 1em;
+  width: 6em;
+}
+.quota .quota-text {
+  display: block;
+  text-align: center;
+  position: relative;
+  top: 5em;
+  font-size: 0.74em;
+}
+.class-profile-header {
+  margin-top: 0.7em;
+}
+.class-profile-header .class-profile-menu {
+  background: #F8F7F7;
+}
+.class-profile-header .class-profile-menu .class-profile-menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0.2em 1em;
+}
+.class-profile-header .class-profile-menu .class-profile-menu-list .class-profile-menu-item .class-profile-menu-link {
+  color: #A7A5A6;
+  text-transform: lowercase;
+  font-family: "Alegreya sans SC", sans-serif;
+}
+.class-profile-header .class-profile-menu .class-profile-menu-list .class-profile-menu-item.active .class-profile-menu-link,
+.class-profile-header .class-profile-menu .class-profile-menu-list .class-profile-menu-item:hover .class-profile-menu-link {
+  color: #84ADAA;
+}
+.class-profile-content {
+  padding: 0 1em;
+  margin-top: 2em;
+}
+.class-profile-content .profile-table,
+.class-profile-footer .access-requests-table {
+  margin-top: 1em;
+}
+.class-profile-content .profile-table .table-row,
+.class-profile-content .profile-simple-form,
+.class-profile-footer .access-requests-table .table-row {
+  display: grid;
+  grid-template-columns: 5em auto 1em;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 0.3em 0;
+}
+.class-profile-content .profile-table .table-row:not(:last-child),
+.class-profile-footer .access-requests-table .table-row:not(:last-child) {
+  border-bottom: 2px solid #EEE9E5;
+}
+.class-profile-content .profile-table .table-row .action,
+.class-profile-footer .access-requests-table .table-row .action {
+  color: #84ADAA;
+  cursor: pointer;
+  font-size: 0.73em;
+}
+.class-profile-content .add-item .action {
+  color: #84ADAA;
+  cursor: pointer;
+}
+.class-profile-content .profile-simple-form {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.class-profile-content .profile-simple-form .form-input {
+  width: calc(100% - 1em);
+  border: 2px solid #EEE9E5;
+  background: #F8F7F7;
+  color: #A7A5A6;
+  padding: 0.1em 0.3em;
+}
+.class-profile-content .profile-simple-form .form-input::-webkit-input-placeholder {
+  color: #CDCBCA;
+}
+.class-profile-content .profile-simple-form .form-input::-moz-placeholder {
+  color: #CDCBCA;
+}
+.class-profile-content .profile-simple-form .form-input::-ms-input-placeholder {
+  color: #CDCBCA;
+}
+.class-profile-content .profile-simple-form .form-input::placeholder {
+  color: #CDCBCA;
+}
+.class-profile-content .profile-simple-form .action {
+  font-size: 0.73em;
+}
+.class-profile-content .profile-simple-form .teacher-name {
+  display: grid;
+  grid-template-columns: 5em auto 5em;
+}
+.class-profile-footer {
+  padding: 0.8em 1em 1.3em 1em;
+  margin-top: 2em;
+  background: #F8F7F7;
+}
+.class-profile-footer .footer-description {
+  text-transform: lowercase;
+  font-family: "Alegreya sans SC", sans-serif;
+}
+.class-profile-footer .access-requests-table .table-row {
+  grid-template-columns: 8em auto 1.4em 1em;
+}
+.class-profile-footer .access-requests-table .table-row .table-data.username {
+  border-right: 2px solid #EEE9E5;
+  margin-right: 0.5em;
+}
+.class-profile-footer .access-requests-table .table-row .action.approve {
+  color: #84ADAA;
+}
+.class-profile-footer .access-requests-table .table-row .action.decline {
+  color: #F08693;
 }
 /*
   THEMES
